Bug 246738 - "Root Folder" gets out of sync with folder view
Summary: "Root Folder" gets out of sync with folder view
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: file list view (other bugs)
Version First Reported In: 4.4.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-04 23:19 UTC by Shaun Andrew
Modified: 2012-02-18 18:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shaun Andrew 2010-08-04 23:19:00 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

Using kde's konqueror, "File Management Profile", the  "Root Folder" will get
out of sync with folder view, whenever a folder (directory) is deleted or
renamed within the folder view pane.  A phantom folder is visible in the "Root
Folder" pane after the folder is deleted or renamed in the folder view pane.

Selecting the phantom folder in the "Root Folder" pane generates and Error
Pop-up window.  Selecting the parent folder above the phantom folder will
display an accurate listing in the folder view pane.  The "Root Folder" and
folder view panes get out of sync.  The only work-around is to close and
re-open konqueror. 



Reproducible: Always

Steps to Reproduce:
 1. launch konqueror
 2. select Settings
 3. select Load View Profile
 4. select File Management
 5. select Root Folder in the left pane
 6. select a folder with sub folders, i.e., home
 7. expand the folder
 8. rename a sub-folder from the folder view pane (right pane)
 9. witness that the sub-folder in Root Folder pane (left pane) did not change
10. select the sub-folder in the Root Folder pane and witness an error pop-up
window "folder does not exist".  (acknowledge by selecting OK on pop-up.)
11. select parent folder of sub-folder from the Root Folder pane and see actual
sub-folder as it was renamed in the folder view pane.


Actual Results:  
Root Folder (left pane) does not reflect folder changes made in folder view
(right pane)



Expected Results:  
Actions performed in one pane should be visible in the other pane. The panes
should stay in sync, and the panes should display the actual folder and file
listings.



The only work-around is to close and re-open konqueror.
Comment 1 Dawit Alemayehu 2012-02-18 18:05:18 UTC
Git commit af14f545604299de02fd9cd0b78423770aca87ba by Dawit Alemayehu.
Committed on 18/02/2012 at 18:05.
Pushed by adawit into branch 'KDE/4.8'.

Fixed logic error that prevented items in the sidebar from being refreshed correctly.
FIXED-IN: 4.8.1

M  +14   -9    konqueror/sidebar/trees/dirtree_module/dirtree_module.cpp

http://commits.kde.org/kde-baseapps/af14f545604299de02fd9cd0b78423770aca87ba
Comment 2 Dawit Alemayehu 2012-02-18 18:07:18 UTC
Git commit 22bc0951b02fdd7f4923fca32153057cbdea19b5 by Dawit Alemayehu.
Committed on 18/02/2012 at 18:05.
Pushed by adawit into branch 'master'.

Fixed logic error that prevented items in the sidebar from being refreshed correctly.
FIXED-IN: 4.8.1

(cherry picked from commit af14f545604299de02fd9cd0b78423770aca87ba)

M  +14   -9    konqueror/sidebar/trees/dirtree_module/dirtree_module.cpp

http://commits.kde.org/kde-baseapps/22bc0951b02fdd7f4923fca32153057cbdea19b5