Fixed logic error that prevented items in the sidebar from being refreshed correctly.

BUG: 246738
FIXED-IN: 4.8.1

(cherry picked from commit af14f545604299de02fd9cd0b78423770aca87ba)